# CosmosCodev1

./: AI-Based Anomaly Detection.py  AI-Based Traffic Forecasting.py  AI-Driven Dashboard Automation.py  AI-driven bandwidth prioritization.py  Add Workspace Scripts.toml  Apply AI-based adjustments.py  Basic AI Model for Anomaly Detection.py  Circuit.py  CosmosCode.sh  Decoding Stage.py  Deep SNMP-Based Network Health Tracking.py  Deploy CosmosCode.yml  Detect Anomalies with AI.py  Dockerfile  Dynamic Traffic Adjustments.py  Gather Real-Time Network Data.py  Live Dashboard Integration.py  Log Bandwidth Usage in Real Time.py  Log latency spikes with AI anomaly detection.py  Node A.txt  Node B.txt  Node C.txt  Omni WiFi self-adjust bandwidth.py  PersistentKeepalive.txt  Predictive congestion detection with AI.py  Qiskit Implementation.py  Quantum Computing Superdense Coding.py  Real-Time Push Notifications.py  Retrieve SNMP data for security alerts.py  SNMP-Based Real-Time Monitoring.py  Send alerts to the dashboard.py  api.py  backend_web.py  bandwidth allocation.py  cargo.toml  combine_everything.py  docker-compose.yml  frontend_web.html  infinite loop.py  main.rs  (+10 more)
wireguard-config-manager/: Cargo.toml  Synchronous Monitoring Example.rs  privatekey  scan_wifi_networks.rs  wg0.conf
wireguard-config-manager/etc/: - Develop Control API for Adjustments.json  AI-Based Traffic Shaping.rs  Automate nftables Rule Adjustments.rs  Cargo.toml  Define Traffic Classes in Code.rs  LSTM for Time-Series Prediction.py  Logging with Python.py  SNMP metrics.rs  Secure API Authentication.rs  (+7 more)
(+10 files in other folders)
