[package]
name = "wireguard-config-manager"
version = "0.1.0"
edition = "2024"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"
tokio = { version = "1", features = ["full"] }

[package]
name = "wireguard-config-manager"
version = "0.1.0"
edition = "2024"

[bin]
wireguard-config-manager = "src/main.rs"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"
tokio = { version = "1", features = ["full"] }


